# Speech2TextWhisper

./: .gitignore  LICENSE  README.md  gui.py  main.py  pyproject.toml  run.bat  run.sh  run.vbs  setup.bat  setup.sh  transcriber.py
