[project]
name = "speech2text-whisper"
version = "0.1.0"
description = "Offline audio transcription with Whisper — desktop GUI and CLI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mikhail Shardin", email = "shardin@shardin.name" }]
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
